added API for setting camera to a player, working on overlayserver with custom overlays
